--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ script:
 
 after_success:
   - coveralls --root . -E ".*external.*" -E ".*tests.*"
-
+  - build-wrapper-linux-x86-64 --out-dir bw-output make clean all
+  - sonar-scanner
+  
 notifications:
   email: false
