--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=mokerova
+sonar.projectKey=mokerova_test
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 sonar.projectName=test
 sonar.projectVersion=1.0
@@ -12,5 +12,3 @@ sonar.exclusions=external/**
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 
-sonar.cfamily.build-wrapper-output=bw-output
-sonar.host.url=https://sonarcloud.io
