--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ language:
 
 before_install:
   - pip install --user cpp-coveralls
+  
+addons:
+  sonarcloud:
+    organization: "mokerova-github"
+    token:
+secure: $SONAR_TOKEN
 
 script:
   - qmake
@@ -13,6 +19,10 @@ after_success:
   - coveralls --root . -E ".*external.*" -E ".*tests.*"
   - build-wrapper-linux-x86-64 --out-dir bw-output make clean all
   - sonar-scanner
+  
+cache:
+  directories:
+- '$HOME/.sonar/cache'
   
 notifications:
   email: false
