--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ language:
 before_install:
   - pip install --user cpp-coveralls
   
+addons:
+  sonarcloud:
+    organization: "mokerova-github"
+    token:
+      secure: $SONAR_TOKEN
 
 
 script:
@@ -16,6 +21,10 @@ after_success:
   - build-wrapper-linux-x86-64 --out-dir bw-output make clean all
   - sonar-scanner
   
+
+cache:
+  directories:
+- '$HOME/.sonar/cache'
 
 notifications:
   email: false
