--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,4 +11,5 @@ sonar.exclusions=external/**
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
-
+sonar.cfamily.build-wrapper-output=bw-output
+sonar.host.url=https://sonarcloud.io
